mixin.less - added overflow auto to .column-width to prevent text from overflowing outside of the column.

--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -11,6 +11,7 @@
 
 .column-width(@totalGridColumns, @numberOfColumns) {
     .gutter();
+    overflow: auto;
     width: calc(100% / (@totalGridColumns / @numberOfColumns) - @gutter-width);
 }
 
